--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ on:
   pull_request:
     branches: [ main ]
   
-#schedule:
+schedule:
    定时任务，每5分钟运行一次
-#- cron: '*/0.5 * * * *'
+- cron: '*/2 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
