--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ on:
   pull_request:
     branches: [ main ]
   
-schedule:
-   定时任务，每2分钟运行一次
-- cron: '*/2 * * * *'
+  schedule:
+  # 定时任务，每5分钟运行一次
+    - cron: '*/2 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -40,4 +40,3 @@ jobs:
         run: |
           pip install lxml
           python ./AutoSign.py
-
